[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/menu/MenuScene.gd" id="1"]

[node name="MenuScene" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.04, 0.05, 0.12, 1)

[node name="BackgroundRunner" type="AnimatedSprite2D" parent="."]
position = Vector2(200, 400)

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0

[node name="TitleLabel" type="Label" parent="UI/VBox"]
text = "AnimePlatformer"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 20)

[node name="PlayButton" type="Button" parent="UI/VBox"]
text = "Play"
custom_minimum_size = Vector2(200, 40)

[node name="OptionsButton" type="Button" parent="UI/VBox"]
text = "Options"
custom_minimum_size = Vector2(200, 40)

[node name="QuitButton" type="Button" parent="UI/VBox"]
text = "Quit"
custom_minimum_size = Vector2(200, 40)

[node name="VersionLabel" type="Label" parent="UI"]
anchors_preset = 4
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -24.0
offset_right = 200.0
offset_bottom = -4.0
text = "v0.1.0-godot"
